Task: Fixed the image alignment in testimonial section

--- a/app/assets/stylesheets/layout/_general.scss
+++ b/app/assets/stylesheets/layout/_general.scss
@@ -380,5 +380,5 @@ and (-webkit-min-device-pixel-ratio: 1) {
 }
 
 .rate-panel-guest-height{
-  height: 36px;
+  height: 32px;
 }
